<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>global_map_builder</name>
  <version>0.0.1</version>
  <description>The global_map_builder package</description>
  <maintainer email="simon-pierre.deschenes.1@ulaval.ca">Simon-Pierre Deschênes</maintainer>
  <license>BSD-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>libpointmatcher_ros</depend>
  <depend>norlab_icp_mapper_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
